<resources>
    <string name="app_name">eBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login_success">登录成功</string>
    <string name="login_failed">账号或密码错误</string>
    <string name="empty_account_or_password">账号和密码不能为空</string>
    <string name="register_success">注册成功，已自动登录</string>
    <string name="register_failed">用户名已存在</string>
    <string name="empty_username_or_password">用户名和密码不能为空</string>
    <string name="select_history_account">选择历史账号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="account_hint">账号（用户名/邮箱/手机号）</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="no_account_go_register">没有账号？去注册</string>
    <string name="has_account_go_login">已有账号？去登录</string>
    <string name="choose_avatar">选择头像</string>
    <string name="take_photo">拍照</string>
    <string name="pick_from_gallery">从相册选择</string>
    <string name="use_default_avatar">使用默认头像</string>
    <string name="press_again_exit">再按一次退出App</string>
    <string name="empty_email">邮箱不能为空</string>
    <string name="invalid_email">邮箱格式不正确</string>
    <string name="empty_phone">手机号不能为空</string>
    <string name="invalid_phone">手机号格式不正确</string>
    <string name="register_title">注册新账号</string>
    <string name="email">邮箱</string>
    <string name="phone">手机号</string>
    <string name="login_title">欢迎登录</string>
    <string name="nav_username">用户名</string>
    <string name="nav_email">邮箱</string>
    <string name="nav_avatar_desc">头像</string>
</resources>